--- a/index.html
+++ b/index.html
@@ -3,20 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link for CSS using Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>My Portfolio</title>
 </head>
 <body>
+
+    <!--This is the header row of the page-->
     <header>
         <div class = "header">
             <h1>Maryum Bokhari</h1>
         </div>
     </header>
 
-    <p>This is a page all about me.</p>
+    <!--This is the body "contained" between the header and the footer-->
+    <div class = "container">
 
 
+
+
+
+
+
+
+
+
+    </div>
+
+    <!--This is the footer row of the page-->
     <footer>
-        
+
     </footer>
 </body>
 </html>
