--- a/index.html
+++ b/index.html
@@ -19,13 +19,31 @@
     <!--This is the body "contained" between the header and the footer-->
     <div class = "container">
 
+        <!--This is Row-1 in the body of the page-->
+        <div class = "row">
+           
+            <!--This is Column-1 of Row-1-->
+            <div class = "col-sm-8">
+                <!--This is a new sub-row within Row-1-->
+                <div class = "row">
+                    <!--This is Column-1 of new sub-row-->
+                    <div class = "col-sm-3">
+                        XXX
+                    </div>
+                    <!--This is Column-2 of new sub-row-->
+                    <div class = "col-sm-9">
+                        XXX
+                    </div>
+                </div>
+            </div>
+
+            <!--This is Column-2 of Row-1-->
+            <div class = "col-sm-4">
+                YYY
+            </div>
 
 
-
-
-
-
-
+        </div>
 
 
     </div>
