added external stylesheet

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
            
             <!--This is Column-1 of Row-1-->
             <div class = "col-sm-8">
+                <h2>About Me</h2>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
                     <!--This is Column-1 of new sub-row-->
