--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link for CSS using Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--link for CSS using external stylesheet-->
+    <link href="C:\Users\maryu\BCS_HOMEWORKS_GITHUB\Week_3\Unit_02_CSS_Bootstrap\styles.css" rel="stylesheet" type="text/css">
     <title>My Portfolio</title>
 </head>
 <body>
-
+ 
     <!--This is the header row of the page-->
     <header>
         <div class = "header">
-            <h1>Maryum Bokhari</h1>
+            <h1>Maryum<b>Bokhari</b></h1>
         </div>
     </header>
 
@@ -29,18 +31,18 @@
                 <div class = "row">
                     <!--This is Column-1 of new sub-row-->
                     <div class = "col-sm-3">
-                        XXX
+                        XXX (image)
                     </div>
                     <!--This is Column-2 of new sub-row-->
                     <div class = "col-sm-9">
-                        XXX
+                        XXX (description)
                     </div>
                 </div>
             </div>
 
             <!--This is Column-2 of Row-1-->
             <div class = "col-sm-4">
-                YYY
+                YYY (card)
             </div>
 
 
