created new html files

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
  
     <!--This is the header row of the page-->
     <header>
+        <!--page logo-->
         <div class = "header">
             <h1>Maryum<b>Bokhari</b></h1>
+
+            <!--hyperlinks for webpage-->
+            <div>
+                <ul>
+                    <li>
+                        <a></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
 
