created hyperlinks in navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
             <div>
                 <ul>
                     <li>
-                        <a></a>
+                        <a href = "index.html">About</a>
+                    </li>
+
+                    <li>
+                        <a href = "contact.html">Contact</a>
+                    </li>
+
+                    <li>
+                        <a href = "portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
