--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,19 @@
         <div class = "header">
             <h1>Maryum<b>Bokhari</b></h1>
 
-            <!--hyperlinks for webpage-->
-            <div>
+             <!--hyperlinks for webpage-->
+             <div>
                 <ul>
                     <li>
-                        <a></a>
+                        <a href = "index.html">About</a>
+                    </li>
+
+                    <li>
+                        <a href = "contact.html">Contact</a>
+                    </li>
+
+                    <li>
+                        <a href = "portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -36,7 +44,7 @@
            
             <!--This is Column-1 of Row-1-->
             <div class = "col-sm-8">
-                <h2>About Me</h2>
+                <h2>My Portfolio</h2>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
                     <!--This is Column-1 of new sub-row-->
