added a paragraph to About page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                     </div>
                     <!--This is Column-2 of new sub-row-->
                     <div class = "col-sm-9">
-                        XXX (description)
+                        <p>
+                            Maryum Bokhari, the creator of this website, is a student currently working on her assignment to become a full stack web developer. She is a hardworking and determined individual, working on her way to set a successful career in engineering and web development. This website provides details about her life, hobbies and ambitions that you may find interesting and inspiring.
+                        </p>
                     </div>
                 </div>
             </div>
