updated navlinks so that the currengt page highlights on website

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,15 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Porfolio</a>
+                    <a class="nav-link" href="index.html">About</a>
+                  </li><li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
-              
             </div>
           </nav>
     </header>
@@ -55,22 +53,11 @@
             <!--This is Column-1 of Row-1-->
             <div class = "col-sm-8">
                 <h3>My Portfolio</h3>
-                <!--This is a new sub-row within Row-1-->
-                <div class = "row">
-                    <!--This is Column-1 of new sub-row-->
-                    <div class = "col-sm-3">
-                        XXX (image)
-                    </div>
-                    <!--This is Column-2 of new sub-row-->
-                    <div class = "col-sm-9">
-                        XXX (description)
-                    </div>
-                </div>
             </div>
 
             <!--This is Column-2 of Row-1-->
             <div class = "col-sm-4">
-                YYY (card)
+                YYY
             </div>
 
 
