--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Porfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -68,7 +68,7 @@
 
             <!--This is Column-2 of Row-1-->
             <div class = "col-sm-4">
-                YYY (card)
+                YYY
             </div>
 
 
