--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     </header>
 
     <!--This is the body "contained" between the header and the footer-->
-    <div class = "container">
+    <div class = "container-sm">
 
         <!--This is Row-1 in the body of the page-->
         <div class = "row">
            
             <!--This is Column-1 of Row-1-->
-            <div class = "col-sm-8">
+            <div class = "col-8">
                 <h3>About Me</h3>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
                     <!--This is Column-1 of new sub-row-->
-                    <div class = "col-sm-3">
+                    <div class = "col-3">
                         XXX (image)
                     </div>
                     <!--This is Column-2 of new sub-row-->
-                    <div class = "col-sm-9">
+                    <div class = "col-9">
                         <p>
                             Maryum Bokhari, the creator of this website, is a student currently working on her assignment to become a full stack web developer. She is a hardworking and determined individual, working on her way to set a successful career in engineering and web development. This website provides details about her life, hobbies and ambitions that you may find interesting and inspiring.
                         </p>
@@ -69,8 +69,8 @@
             </div>
 
             <!--This is Column-2 of Row-1-->
-            <div class = "col-sm-4">
-                YYY (card)
+            <div class = "col-4">
+                YYY
             </div>
 
 
