--- a/contact.html
+++ b/contact.html
@@ -45,37 +45,23 @@
     </header>
 
     <!--This is the body "contained" between the header and the footer-->
-    <div class = "container">
-
-        <!--This is Row-1 in the body of the page-->
-        <div class = "row">
-           
-            <!--This is Column-1 of Row-1-->
-            <div class = "col-sm-8">
-                <h3>Contact Me</h3>
-                <!--This is a new sub-row within Row-1-->
-                <div class = "row">
-                    <!--This is Column-1 of new sub-row-->
-                    <div class = "col-sm-3">
-                        XXX (image)
-                    </div>
-                    <!--This is Column-2 of new sub-row-->
-                    <div class = "col-sm-9">
-                        XXX (description)
-                    </div>
-                </div>
+        <div class = "container-sm">
+          <div id = "textbox" class = "p-3 border bg-light">
+          <!--This is Row-1 in the body of the page; the page heading-->
+                  <h3>Contact Me</h3>
+                  <!--This is a new sub-row within Row-1-->
+                  <div class = "row">
+                      <!--This is Column-1 of new sub-row-->
+                      <div class = "col-3">
+                          XXX
+                      </div>
+                      <!--This is Column-2 of new sub-row-->
+                      <div class = "col-9">
+                          XXX
+                      </div>
+                  </div>
             </div>
-
-            <!--This is Column-2 of Row-1-->
-            <div class = "col-sm-4">
-                YYY
-            </div>
-
-
-        </div>
-
-
-    </div>
+        </div> 
 
     <!--This is the footer row of the page-->
     <footer>
