--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
 
     <!--This is the body "contained" between the header and the footer-->
     <div class = "container-sm">
-
-        <!--This is Row-1 in the body of the page-->
-        <div class = "row">
-           
-            <!--This is Column-1 of Row-1-->
-            <div class = "col-8">
+        <div id = "textbox" class = "p-3 border bg-light">
+        <!--This is Row-1 in the body of the page; the page heading-->
                 <h3>About Me</h3>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
@@ -66,18 +62,8 @@
                         </p>
                     </div>
                 </div>
-            </div>
-
-            <!--This is Column-2 of Row-1-->
-            <div class = "col-4">
-                YYY
-            </div>
-
-
-        </div>
-
-
-    </div>
+          </div>
+      </div> 
 
     <!--This is the footer row of the page-->
     <footer>
