--- a/portfolio.html
+++ b/portfolio.html
@@ -44,27 +44,24 @@
           </nav>
     </header>
 
-    <!--This is the body "contained" between the header and the footer-->
-    <div class = "container">
-
-        <!--This is Row-1 in the body of the page-->
-        <div class = "row">
-           
-            <!--This is Column-1 of Row-1-->
-            <div class = "col-sm-8">
+      <!--This is the body "contained" between the header and the footer-->
+      <div class = "container-sm">
+        <div id = "textbox" class = "p-3 border bg-light">
+        <!--This is Row-1 in the body of the page; the page heading-->
                 <h3>My Portfolio</h3>
-            </div>
-
-            <!--This is Column-2 of Row-1-->
-            <div class = "col-sm-4">
-                YYY
-            </div>
-
-
-        </div>
-
-
-    </div>
+                <!--This is a new sub-row within Row-1-->
+                <div class = "row">
+                    <!--This is Column-1 of new sub-row-->
+                    <div class = "col-6">
+                        XXX (image)
+                    </div>
+                    <!--This is Column-2 of new sub-row-->
+                    <div class = "col-6">
+                        XXX (image)
+                    </div>
+                </div>
+          </div>
+      </div> 
 
     <!--This is the footer row of the page-->
     <footer>
