--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
     <!--This is the body "contained" between the header and the footer-->
     <div class = "container-sm">
-        <div id = "textbox" class = "p-3 border bg-light">
-        <!--This is Row-1 in the body of the page; the page heading-->
+      <div class = "row"><br><br></div>
+        <div id = "textbox" class = "p-4 border bg-light">
+        <!--This is Row-1 in the gutter; the page heading-->
                 <h3>About Me</h3>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
@@ -58,7 +59,9 @@
                     <!--This is Column-2 of new sub-row-->
                     <div class = "col-9">
                         <p>
-                            Maryum Bokhari, the creator of this website, is a student currently working on her assignment to become a full stack web developer. She is a hardworking and determined individual, working on her way to set a successful career in engineering and web development. This website provides details about her life, hobbies and ambitions that you may find interesting and inspiring.
+                            Maryum Bokhari, the creator of this portfolio, is a student currently working on her assignment to become a full stack web developer. She is a hardworking and determined individual, working on her way to set a successful career in engineering and web development. This website provides details about her life, hobbies and ambitions that you may find interesting and inspiring. For more information about her lifestyle and background, have a look at the images in the <a href = "portfolio.html">Porfolio</a> section.<br>
+
+                            <br>Maryum is originally from Pakistan; she achieved her basic education from her hometown, Lahore, and then moved to England in 2016 to continue her pursuit in becoming an engineer, from Aston University. In 2020, she joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.
                         </p>
                     </div>
                 </div>
