--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,9 @@
 
       <!--This is the body "contained" between the header and the footer-->
       <div class = "container-sm">
-        <div id = "textbox" class = "p-3 border bg-light">
-        <!--This is Row-1 in the body of the page; the page heading-->
+        <div class = "row"><br><br></div>
+        <div id = "textbox" class = "p-4 border bg-light">
+        <!--This is Row-1 in the gutter; the page heading-->
                 <h3>My Portfolio</h3>
                 <!--This is a new sub-row within Row-1-->
                 <div class = "row">
