added and styled footer

--- a/contact.html
+++ b/contact.html
@@ -69,16 +69,18 @@
                               <label for="exampleInputMessage" class="form-label">Message</label>
                               <input type="text" class="form-control" id="exampleInputMessage" aria-describedby="messageHelp">
                             </div>
-                            <!--This is the submit button-->
+                            <!--This is the submit-->
                             <button type="button" class="btn btn-primary">Submit</button>
                           </form>
                       </div>
                   </div>
                 </div>
 
-    <!--This is the footer row of the page-->
-    <footer>
-
-    </footer>
+   <!--This is the footer row of the page-->
+   <footer class="page-footer font-small blue">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright
+    </div>
+</footer>
 </body>
 </html>
