--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
       </div> 
 
     <!--This is the footer row of the page-->
-    <footer>
-
+      <footer class="page-footer font-small blue">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright
+        </div>
     </footer>
 </body>
 </html>
