--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,11 @@
           </div>
       </div> 
 
-    <!--This is the footer row of the page-->
-    <footer>
-
-    </footer>
+   <!--This is the footer row of the page-->
+   <footer class="page-footer font-small blue">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright
+    </div>
+</footer>
 </body>
 </html>
