--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class = "row">
                     <!--This is Column-1 of new sub-row-->
                     <div class = "col-3">
-                        XXX (image)
+                        <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/GirlImage.JPG"  height = 160px width = 150px>
                     </div>
                     <!--This is Column-2 of new sub-row-->
                     <div class = "col-9">
