--- a/portfolio.html
+++ b/portfolio.html
@@ -50,15 +50,37 @@
         <div id = "textbox" class = "p-4 border bg-light">
         <!--This is Row-1 in the gutter; the page heading-->
                 <h3>My Portfolio</h3>
-                <!--This is a new sub-row within Row-1-->
+                <!--This is Row-2-->
                 <div class = "row">
-                    <!--This is Column-1 of new sub-row-->
+                    <!--This is Column-1 of Row-2-->
                     <div class = "col-6">
-                        XXX (image)
+                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/LahoreLocation.JPG" class = "img-fluid">
+                      <p>This is Lahore on a Map.</p>
                     </div>
-                    <!--This is Column-2 of new sub-row-->
+                    <!--This is Column-2 of Row-2-->
                     <div class = "col-6">
-                        XXX (image)
+                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/LahoreShahiQila.JPG" class = "img-fluid">
+                      <p>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and tourist attracttion.</p>
+                    </div>
+                </div>
+
+                <!--This is Row-3-->
+                <div class = "row">
+                    <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/CJM.JPG" class = "img-fluid">
+                    <p>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</p>
+                </div>
+
+                <!--This is Row-4-->
+                <div class = "row">
+                    <!--This is Column-1 of Row-4-->
+                    <div class = "col-6">
+                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/AstonUniversity.JPG" class = "responsive">
+                    <p>Aston University, right here in Birmingham, UK.</p>
+                    </div>
+                    <!--This is Column-2 of Row-4-->
+                    <div class = "col-6">
+                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/UOB.JPG" class = "responsive">
+                    <p>Of course, the very well-known University of Birmingham.</p>
                     </div>
                 </div>
           </div>
