made editions to About & Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link for CSS using Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <!-- link for JavaScript Bundle with Popper using Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <!--link for CSS using external stylesheet-->
     <link href="C:\Users\maryu\BCS_HOMEWORKS_GITHUB\Week_3\Unit_02_CSS_Bootstrap\styles.css" rel="stylesheet" type="text/css">
     <title>My Portfolio</title>
@@ -28,7 +26,6 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 
                 <!--These are the hyperlinks on the navbar-->
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
@@ -39,7 +36,6 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
-              </div>
             </div>
           </nav>
     </header>
@@ -54,19 +50,19 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-2-->
                     <div class = "col-6">
-                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/LahoreLocation.JPG" class = "img-fluid">
+                      <img src="Assets/LahoreLocation.JPG" class = "img-fluid">
                       <p>This is Lahore on a Map.</p>
                     </div>
                     <!--This is Column-2 of Row-2-->
                     <div class = "col-6">
-                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/LahoreShahiQila.JPG" class = "img-fluid">
+                      <img src="Assets/LahoreShahiQila.JPG" class = "img-fluid">
                       <p>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and tourist attracttion.</p>
                     </div>
                 </div>
 
                 <!--This is Row-3-->
                 <div class = "row">
-                    <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/CJM.JPG" class = "img-fluid">
+                    <img src="Assets/CJM.JPG" class = "img-fluid">
                     <p>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</p>
                 </div>
 
@@ -74,12 +70,12 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-4-->
                     <div class = "col-6">
-                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/AstonUniversity.JPG" class = "responsive">
+                      <img src="Assets/AstonUniversity.JPG" class = "responsive">
                     <p>Aston University, right here in Birmingham, UK.</p>
                     </div>
                     <!--This is Column-2 of Row-4-->
                     <div class = "col-6">
-                      <img src="C:/Users/maryu/BCS_HOMEWORKS_GITHUB/Week_3/Unit_02_CSS_Bootstrap/Assets/UOB.JPG" class = "responsive">
+                      <img src="Assets/UOB.JPG" class = "responsive">
                     <p>Of course, the very well-known University of Birmingham.</p>
                     </div>
                 </div>
@@ -92,5 +88,7 @@
     <div class="footer-copyright text-center py-3">© 2020 Copyright
     </div>
 </footer>
+<!-- link for JavaScript Bundle with Popper using Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
