made editions to images

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,12 +70,12 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/AstonUniversity.JPG" class = "responsive">
+                      <img src="Assets/AstonUniversity.JPG" class = "img-fluid">
                     <p>Aston University, right here in Birmingham, UK.</p>
                     </div>
                     <!--This is Column-2 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/UOB.JPG" class = "responsive">
+                      <img src="Assets/UOB.JPG" class = "img-fluid">
                     <p>Of course, the very well-known University of Birmingham.</p>
                     </div>
                 </div>
