--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <!-- link for CSS using Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!--link for CSS using external stylesheet-->
-    <link href="C:\Users\maryu\BCS_HOMEWORKS_GITHUB\Week_3\Unit_02_CSS_Bootstrap\styles.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
     <title>My Portfolio</title>
 </head>
 <body>
