made edition image on About page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <!--This is Column-1 of new sub-row-->
         <div class="col-3">
-          <img src="Assets/GirlImage.JPG" class="responsive">
+          <img src="Assets/GirlImage.JPG" class="img-fluid">
         </div>
         <!--This is Column-2 of new sub-row-->
         <div class="col-9">
