made edition images on Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,19 +50,19 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-2-->
                     <div class = "col-6">
-                      <img src="Assets/LahoreLocation.JPG" class = "img-fluid">
+                      <img src="Assets/LahoreLocation.JPG" class = "img-fluid" alt = "Geographical Location of Lahore">
                       <p>This is Lahore on a Map.</p>
                     </div>
                     <!--This is Column-2 of Row-2-->
                     <div class = "col-6">
-                      <img src="Assets/LahoreShahiQila.JPG" class = "img-fluid">
+                      <img src="Assets/LahoreShahiQila.JPG" class = "img-fluid" alt = "Lahore Fort">
                       <p>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and tourist attracttion.</p>
                     </div>
                 </div>
 
                 <!--This is Row-3-->
                 <div class = "row">
-                    <img src="Assets/CJM.JPG" class = "img-fluid">
+                    <img src="Assets/CJM.JPG" class = "img-fluid" alt = "Convent of Jesus and Mary, Lahore">
                     <p>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</p>
                 </div>
 
@@ -70,12 +70,12 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/AstonUniversity.JPG" class = "img-fluid">
+                      <img src="Assets/AstonUniversity.JPG" class = "img-fluid" alt = "Aston University, Birmingham">
                     <p>Aston University, right here in Birmingham, UK.</p>
                     </div>
                     <!--This is Column-2 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/UOB.JPG" class = "img-fluid">
+                      <img src="Assets/UOB.JPG" class = "img-fluid" alt = "University of Birmingham">
                     <p>Of course, the very well-known University of Birmingham.</p>
                     </div>
                 </div>
