--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,8 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
-                  </li><li class="nav-item">
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
                   </li>
                   <li class="nav-item">
@@ -37,7 +38,7 @@
                   </li>
                 </ul>
             </div>
-          </nav>
+        </nav>
     </header>
 
       <!--This is the body "contained" between the header and the footer-->
