added new semantic elements

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
       <div class="row">
         <!--This is Column-1 of new sub-row-->
         <div class="col-3">
-          <img src="Assets/GirlImage.JPG" class = "img-fluid" alt = "My Profile Image">
+          <figure><img src="Assets/GirlImage.JPG" class = "img-fluid" alt = "My Profile Image">
+          </figure>
         </div>
         <!--This is Column-2 of new sub-row-->
         <div class="col-9">
+          <section>
           <p>
             Maryum Bokhari, the creator of this portfolio, is a student currently working on her assignment to become a
             full-stack web developer. She is a hardworking and determined individual, working her way to set a
@@ -84,6 +86,7 @@
           made the decision to pursue Coding from UOB, to advance her career and prospect of getting a job in the STEM
           field.
           </p>
+        </section>
         </div>
       </div>
     </div>
