--- a/portfolio.html
+++ b/portfolio.html
@@ -51,34 +51,49 @@
                 <div class = "row">
                     <!--This is Column-1 of Row-2-->
                     <div class = "col-6">
-                      <img src="Assets/LahoreLocation.JPG" class = "img-fluid" alt = "Geographical Location of Lahore">
-                      <p>This is Lahore on a Map.</p>
+                      <figure><img src="Assets/LahoreLocation.JPG" class = "img-fluid" alt = "Geographical Location of Lahore">
+                      <figcaption>See that pink star? That's Lahore on a map.</figcaption>
+                    </figure>
                     </div>
                     <!--This is Column-2 of Row-2-->
                     <div class = "col-6">
-                      <img src="Assets/LahoreShahiQila.JPG" class = "img-fluid" alt = "Lahore Fort">
-                      <p>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and tourist attracttion.</p>
-                    </div>
+                      <figure><img src="Assets/LahoreShahiQila.JPG" class = "img-fluid" alt = "Lahore Fort">
+                      <figcaption>The very beautiful and famous Shahi Qila, or the Lahore Fort; a very important landmark and tourist attracttion of my hometown.</figcaption>
+                    </figure>
+                  </div>
                 </div>
 
                 <!--This is Row-3-->
                 <div class = "row">
-                    <img src="Assets/CJM.JPG" class = "img-fluid" alt = "Convent of Jesus and Mary, Lahore">
-                    <p>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</p>
+                  <!--This is Column-1 of Row-3-->
+                  <div class = "col-2"></div>
+
+                  <!--This is Column-2 of Row-3-->
+                    <div class = "col-8">
+                    <figure><img src="Assets/CJM.JPG" class = "img-fluid" alt = "Convent of Jesus and Mary, Lahore">
+                    <figcaption>In the loving memory of my school, Convent of Jesus and Mary, Lahore.</figcaption>
+                </figure>
                 </div>
+
+                  <!--This is Column-3 of Row-3-->
+                  <div class = "col-2"></div>
+
+              </div>
 
                 <!--This is Row-4-->
                 <div class = "row">
                     <!--This is Column-1 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/AstonUniversity.JPG" class = "img-fluid" alt = "Aston University, Birmingham">
-                    <p>Aston University, right here in Birmingham, UK.</p>
-                    </div>
+                      <figure><img src="Assets/AstonUniversity.JPG" class = "img-fluid" alt = "Aston University, Birmingham">
+                    <figcaption>Aston University, right here in Birmingham, UK.</figcaption>
+                    </figure>
+                  </div>
                     <!--This is Column-2 of Row-4-->
                     <div class = "col-6">
-                      <img src="Assets/UOB.JPG" class = "img-fluid" alt = "University of Birmingham">
-                    <p>Of course, the very well-known University of Birmingham.</p>
-                    </div>
+                      <figure><img src="Assets/UOB.JPG" class = "img-fluid" alt = "University of Birmingham">
+                    <figcaption>Of course, the very well-known University of Birmingham.</figcaption>
+                  </figure>
+                </div>
                 </div>
           </div>
       </div> 
