--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,8 @@
 
    <!--This is the footer row of the page-->
    <footer class="page-footer font-small blue">
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright
+    <!-- Copyright and link -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright; follow me on LinkedIn <a href = "https://www.linkedin.com/in/max-bokhari-9070581ba" target = "_blank">here</a>
     </div>
 </footer>
 <!-- link for JavaScript Bundle with Popper using Bootstrap-->
