--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
         <div class="col-9">
           <section>
           <p>
-            Maryum Bokhari, the creator of this portfolio, is a student currently working on her assignment to become a
-            full-stack web developer. She is a hardworking and determined individual, working her way to set a
-            successful career in engineering and web development. This website provides details about her life, hobbies
-            and ambitions that you may find interesting and inspiring. For more information about her lifestyle and
+            Maryum Bokhari, the creator of this portfolio (myself), is a student currently working on a venture to become a
+            full-stack web developer. I am a hardworking and determined individual, working my way to set a
+            successful career in engineering and web development. This website provides details about my life, hobbies
+            and ambitions that you may find interesting and inspiring. For more information about my lifestyle and
             background, have a look at the images in the <a href="portfolio.html">Porfolio</a> section.<br>
 
-            <br>Maryum is originally from Pakistan; she achieved her basic education from her hometown, Lahore, and then
-            moved to England in 2016 to continue her pursuit in becoming an engineer, from Aston University. In 2020,
-            she joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.<br>
+            <br>Originally from Pakistan, I have achieved my basic education from my hometown, Lahore, and then
+            moved to England in 2016 to continue my pursuit in becoming an engineer, from Aston University. In 2020,
+            I joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.<br>
 
             <br> My basic educational achievemants include the following:
 
@@ -82,8 +82,8 @@
             <li>A Chemical Enigeering Honours Degree from Aston University, in 2020.</li>
           </ul><br>
 
-          It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, Maryum
-          made the decision to pursue Coding from UOB, to advance her career and prospect of getting a job in the STEM
+          It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
+          made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
           field.
           </p>
         </section>
