--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!--This is the footer row of the page-->
   <footer class="page-footer font-small blue">
     <!-- Copyright and link -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright; follow me on LinkedIn <a href = "https://www.linkedin.com/in/max-bokhari-9070581ba" target = "_blank">here</a>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright; follow me on LinkedIn <a href = "www.linkedin.com/in/maryum-bokhari-9070581ba" target = "_blank">here</a>
     </div>
   </footer>
   <!-- link for JavaScript Bundle with Popper using Bootstrap-->
