edited and modified footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <!--link for CSS using external stylesheet-->
-  <link href="styles.css" rel="stylesheet"
-    type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
   <title>My Portfolio</title>
 </head>
 
@@ -29,20 +28,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
           <!--These are the hyperlinks on the navbar-->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Porfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Porfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
 
         </div>
-        </div>
+      </div>
     </nav>
   </header>
 
@@ -56,37 +55,38 @@
       <div class="row">
         <!--This is Column-1 of new sub-row-->
         <div class="col-3">
-          <figure><img src="Assets/GirlImage.JPG" class = "img-fluid" alt = "My Profile Image">
+          <figure><img src="Assets/GirlImage.JPG" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row-->
         <div class="col-9">
           <section>
-          <p>
-            Maryum Bokhari, the creator of this portfolio (myself), is a student currently working on a venture to become a
-            full-stack web developer. I am a hardworking and determined individual, working my way to set a
-            successful career in engineering and web development. This website provides details about my life, hobbies
-            and ambitions that you may find interesting and inspiring. For more information about my lifestyle and
-            background, have a look at the images in the <a href="portfolio.html">Porfolio</a> section.<br>
+            <p>
+              Maryum Bokhari, the creator of this portfolio (myself), is a student currently working on a venture to
+              become a
+              full-stack web developer. I am a hardworking and determined individual, working my way to set a
+              successful career in engineering and web development. This website provides details about my life, hobbies
+              and ambitions that you may find interesting and inspiring. For more information about my lifestyle and
+              background, have a look at the images in the <a href="portfolio.html">Porfolio</a> section.<br>
 
-            <br>Originally from Pakistan, I have achieved my basic education from my hometown, Lahore, and then
-            moved to England in 2016 to continue my pursuit in becoming an engineer, from Aston University. In 2020,
-            I joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.<br>
+              <br>Originally from Pakistan, I have achieved my basic education from my hometown, Lahore, and then
+              moved to England in 2016 to continue my pursuit in becoming an engineer, from Aston University. In 2020,
+              I joined a Bootcamp at University of Birmingham, to learn and become an expert at coding.<br>
 
-            <br> My basic educational achievemants include the following:
+              <br> My basic educational achievemants include the following:
 
-          <ul>
-            <li>8 O level subjects, passed with 2 A*'s and 6 A's, from Convent of Jesus and Mary, Lahore, Pakistan, in
-              2014.</li>
-            <li>3 A level subjects, passed with an A in Chemistry, and 2 B's in Mathematics and Biology, in 2016.</li>
-            <li>A Chemical Enigeering Honours Degree from Aston University, in 2020.</li>
-          </ul><br>
+            <ul>
+              <li>8 O level subjects, passed with 2 A*'s and 6 A's, from Convent of Jesus and Mary, Lahore, Pakistan, in
+                2014.</li>
+              <li>3 A level subjects, passed with an A in Chemistry, and 2 B's in Mathematics and Biology, in 2016.</li>
+              <li>A Chemical Enigeering Honours Degree from Aston University, in 2020.</li>
+            </ul><br>
 
-          It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
-          made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
-          field.
-          </p>
-        </section>
+            It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
+            made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
+            field.
+            </p>
+          </section>
         </div>
       </div>
     </div>
@@ -95,12 +95,23 @@
   <!--This is the footer row of the page-->
   <footer class="page-footer font-small blue">
     <!-- Copyright and link -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright; follow me on LinkedIn <a href = "www.linkedin.com/in/maryum-bokhari-9070581ba" target = "_blank">here</a>
+    <div class="row">
+      <div class="col-6">
+        <div class="footer-copyright text-center py-3">
+          © 2020 Copyright
+        </div>
+      </div>
+      <div class="col-6">
+        <a href="www.linkedin.com/in/maryum-bokhari-9070581ba" target="_blank">here</a>
+      </div>
     </div>
   </footer>
+
+  
   <!-- link for JavaScript Bundle with Popper using Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
