--- a/portfolio.html
+++ b/portfolio.html
@@ -104,13 +104,26 @@
           </div>
       </div> 
 
-   <!--This is the footer row of the page-->
-   <footer class="page-footer font-small blue">
+     <!--This is the footer row of the page-->
+  <footer class="page-footer font-small blue">
     <!-- Copyright and link -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright; follow me on LinkedIn <a href = "www.linkedin.com/in/maryum-bokhari-9070581ba" target = "_blank">here</a>
+    <div class="row">
+      <div class="col-6">
+        <div class="footer-copyright text-center py-3">
+          © 2020 Copyright
+        </div>
+      </div>
+      <div class="col-6">
+        <a href="www.linkedin.com/in/maryum-bokhari-9070581ba" target="_blank">here</a>
+      </div>
     </div>
-</footer>
-<!-- link for JavaScript Bundle with Popper using Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </footer>
+
+  
+  <!-- link for JavaScript Bundle with Popper using Bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
