--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <!-- link for CSS using Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <!--link for CSS using external stylesheet-->
+  <!-- link for CSS using external stylesheet -->
   <link href="styles.css" rel="stylesheet" type="text/css">
+  <!-- link to Font Awesome icons -->
+  <script src="https://kit.fontawesome.com/f53a07ee43.js" crossorigin="anonymous"></script>
   <title>My Portfolio</title>
 </head>
 
@@ -90,6 +92,10 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
 
   <!--This is the footer row of the page-->
@@ -102,12 +108,15 @@
         </div>
       </div>
       <div class="col-6">
-        <a href="www.linkedin.com/in/maryum-bokhari-9070581ba" target="_blank">here</a>
+        Follow me on social media:
+        <br>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
 
-  
+
   <!-- link for JavaScript Bundle with Popper using Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
