--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
           </figure>
         </div>
         <!--This is Column-2 of new sub-row-->
-        <div class="col-9">
+        <div class="col-6">
           <section>
             <p>
-              Maryum Bokhari, the creator of this portfolio (myself), is a student currently working on a venture to
-              become a
-              full-stack web developer. I am a hardworking and determined individual, working my way to set a
-              successful career in engineering and web development. This website provides details about my life, hobbies
-              and ambitions that you may find interesting and inspiring. For more information about my lifestyle and
+              I, Maryum Bokhari, am a student currently working on a venture to become a Full-Stack Web Developer. I am
+              a
+              hardworking and determined individual, working my way to set a successful career in engineering and web
+              development.
+              This website provides details about my life, hobbies and ambitions that you may find interesting and
+              inspiring. For more information about my lifestyle and
               background, have a look at the images in the <a href="portfolio.html">Porfolio</a> section.<br>
 
               <br>Originally from Pakistan, I have achieved my basic education from my hometown, Lahore, and then
@@ -84,11 +85,26 @@
               <li>A Chemical Enigeering Honours Degree from Aston University, in 2020.</li>
             </ul><br>
 
+            <p>Being a student at University of Birmingham, as mentioned earlier, I learned how to code and create web
+              applications, as a part of the Full-Stack Web Development course. Some such projects that I submitted as a
+              part of the assessment criteria for the course included the following three, shown as examples to
+              demonstrate my programming skills:</p>
+
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+
             It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
             made the decision to pursue Coding from UOB, to advance my career and prospect of getting a job in the STEM
             field.
             </p>
           </section>
+        </div>
+        <!--This is Column-3 of new sub-row-->
+        <div class="col-3">
+          
         </div>
       </div>
     </div>
@@ -110,7 +126,8 @@
       <div class="col-6">
         Follow me on social media:
         <br>
-        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/maryum-bokhari-9070581ba/" target="_blank"><i
+            class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/maryumbokhari97/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
