edited and added content to About page, with images

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <!--This is a new sub-row within Row-1-->
       <div class="row">
         <!--This is Column-1 of new sub-row-->
-        <div class="col-3">
+        <div class="col-2">
           <figure><img src="Assets/GirlImage.JPG" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row-->
-        <div class="col-6">
+        <div class="col-7">
           <section>
             <p>
               I, Maryum Bokhari, am a student currently working on a venture to become a Full-Stack Web Developer. I am
@@ -91,9 +91,51 @@
               demonstrate my programming skills:</p>
 
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li><b>The Code Quiz</b> - this is a rather entertaining and very interactive web application that asks
+                coding-related questions to the user, under a time limit. It has been created by myself, and is designed
+                to be very simplistic and user-friendly. Take a look:
+                <br><br>
+                <img src="Assets/Code-Quiz.png" class="img-fluid" alt="Code Quiz">
+                <p>You may find the deployed webpage <a href="https://maryum97.github.io/04_Web-API-s_Code_Quiz/"
+                    target="_blank">here</a>.</p>
+                <p>Check out the Github repository <a href="https://github.com/Maryum97/04_Web-API-s_Code_Quiz"
+                    target="_blank">here</a>.</p>
+              </li>
+              <li><b>My Weather Dashboard</b> - ah, my favourite... this is the website I created for the purpose of
+                checking the current and future weather forecast of any city/country around the world, made possible
+                with the use of weather API's. It stores the name of any location searched, so thay you may have another
+                look! Here's the forecast of Birmingham shown on my Weather Dashboard:
+                <br><br>
+                <img src="Assets/Weather-Dashboard.png" class="img-fluid" alt="Weather Dashboard">
+                <p>You may find the deployed webpage <a
+                    href="https://github.com/Maryum97/06_Server-Side-API-s_Weather-Dashboard" target="_blank">here</a>.
+                </p>
+                <p>Check out the Github repository <a
+                    href="https://maryum97.github.io/06_Server-Side-API-s_Weather-Dashboard/" target="_blank">here</a>.
+                </p>
+              </li>
+              <li><b>"Believe." - A Group Project</b> - this is a website created by myself and three other people in my
+                group. This is yet another highly simplistic and a user-friendly platform created for the purpose of
+                tracking your health and wellbeing to improve your
+                general lifestyle; it has made use of all front-end programming tools, including API's (one of which
+                served the purpose of importing nutritional value of the food we eat on a daily basis). The website
+                consists of three web-pages, all shown below:
+                <br><br>
+                <p>The "Home" page:</p>
+                <img src="Assets/Believe.-1.png" class="img-fluid" alt="Home">
+                <br><br>
+                <p>The "My Wellbeing Goals" page:</p>
+                <img src="Assets/Believe.-2.png" class="img-fluid" alt="My Wellbeing Goals">
+                <br><br>
+                <p>The "Nutrition Tracking" page:</p>
+                <img src="Assets/Believe.-3.png" class="img-fluid" alt="Nutrition Tracking">
+                <p>Yet again, you may find the deployed webpage <a href="https://maryum97.github.io/believe/index.html"
+                    target="_blank">here</a>.
+                </p>
+                <p>Check out the Github repository too <a href="https://github.com/Maryum97/believe"
+                    target="_blank">here</a>.
+                </p>
+              </li>
             </ol>
 
             It is always helpful to remain up-to-date with the advancement in science and technology. Therefore, I
@@ -104,7 +146,7 @@
         </div>
         <!--This is Column-3 of new sub-row-->
         <div class="col-3">
-          
+
         </div>
       </div>
     </div>
