--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <!--This is Column-1 of new sub-row-->
         <div class="col-2">
-          <figure><img src="Assets/GirlImage.JPG" class="img-fluid" alt="My Profile Image">
+          <figure><img src="Assets/Profile Pic.png" class="img-fluid" alt="My Profile Image">
           </figure>
         </div>
         <!--This is Column-2 of new sub-row-->
